tests/invalid/SetIntersect_Invalid_1.whiley
method main() -> bool:
    {int} xs = {1, 2, 3}
    return 1.0 & xs
